# MonoCamLegoSLAM

./: .gitignore  .gitmodules  CMakeLists.txt  convert_all_ppm_to_jpg_and_delete.bat
MonoCamLegoSLAM/: CMakeLists.txt
MonoCamLegoSLAM/include/: Assert.hpp  Camera.hpp  Image.hpp  KeyLogger.hpp  LineSegmentDetector.hpp  VanishingPointEstimator.hpp
MonoCamLegoSLAM/src/: Camera.cpp  Image.cpp  KeyLogger.cpp  LineSegmentDetector.cpp  VanishingPointEstimator.cpp
app/: battery.cpp  capture.cpp  drive_test.cpp  sensor_test.cpp  stop.cpp  vp.cpp
dataset/: README.txt  motorLog.txt
dataset/img_ppm/: img_0_2006.ppm  img_100_157208.ppm  img_101_158745.ppm  img_102_160345.ppm  img_103_161885.ppm  img_104_163385.ppm  img_105_164922.ppm  img_106_166521.ppm  img_107_168058.ppm  img_108_169561.ppm  img_109_171097.ppm  img_10_17555.ppm  img_110_172637.ppm  img_111_174169.ppm  img_112_175737.ppm  img_113_177274.ppm  img_114_178810.ppm  img_115_180443.ppm  img_116_181978.ppm  img_117_183514.ppm  img_118_185117.ppm  img_119_186684.ppm  img_11_19091.ppm  img_120_188219.ppm  img_121_189758.ppm  img_122_191290.ppm  img_123_192861.ppm  img_124_194397.ppm  img_125_195930.ppm  img_126_197469.ppm  img_127_199037.ppm  img_128_200570.ppm  img_129_202109.ppm  img_12_20627.ppm  img_130_203644.ppm  img_131_205210.ppm  img_132_207003.ppm  img_133_208507.ppm  img_134_210045.ppm  img_135_211547.ppm  (+453 more)
lib/: CMakeLists.txt
scripts/: batch_lsd.py  batch_vp.py  batch_vp_via_wsl.py  composite_images.py  odometry.py  odometry_angles.pkl  odometry_timestamps.pkl  slam.py  vp_via_wsl.py
(+495 files in other folders)
